[metadata]
name = rqalpha-mod-log
version = 0.1.1
author = LawrentChen
author_email = laurant.chen@gmail.com
description = RQAlpha Mod for logbook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lawrentchen/rqalpha-mod-log
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .